tests/fixtures/invalid/pow_int_none_none.py
# Cannot call pow() with Int, None, None
x = pow(1, None, None)
